--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,5 +1,5 @@
 <ion-view title="map">
-  <ion-content>
+  <ion-content scroll="false">
     <div>
       <div id="map" lat="-23.639492" lng="133.709107" zoom="8" map>
       </div>
