--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,4 +1,4 @@
-<ion-view title="map">
+<ion-view title="iMap">
   <ion-content scroll="false">
     <div>
       <div id="map" lat="-23.639492" lng="133.709107" zoom="8" map>
